@@ -1,0 +1,33 @@
+.TH XCHAT-GNOME "1" "April 2006" "xchat-gnome 0.10" "User Commands"
+.SH NAME
+xchat-gnome-remote \- tells a running xchat-gnome to perform tasks via dbus
+.SH DESCRIPTION
+.PP
+This is a manual page written for Debian because the original package doesn't have one. For further reference, check the \fBSEE ALSO\fR section.
+.SS "Usage:"
+.IP
+xchat\-gnome\-remote [OPTION...]
+.SS "Options:"
+\fB\-u\fR, \fB\-\-url\fR=\fIirc\fR://server:port/channel
+Open an irc:// url
+.TP
+\fB\-c\fR, \fB\-\-command\fR=\fcommand\fR
+Execute a xchat command
+.TP
+\fB\-p\fR, \fB\-\-print\fR=\ftext\fR
+Prints some text to the current tab/window
+.TP
+\fB\-s\fR, \fB\-\-channel\fR=\fchannel\fR
+Change the context to the channel
+.TP
+\fB\-s\fR, \fB\-\-server\fR=\fserver\fR
+Change the context to the server
+.TP
+\fB\-i\fR, \fB\-\-info\fR=\fid\fR
+Get some informations from xchat
+.TP
+\fB\-r\fR, \fB\-\-prefs\fR=\fname\fR
+Get settings from xchat
+.TP
+.SH "SEE ALSO"
+.BR xchat-gnome (1)
