@@ -1,0 +1,52 @@
+.TH XCHAT-GNOME "1" "April 2006" "xchat-gnome 0.10" "User Commands"
+.SH NAME
+xchat-gnome \- a new front-end to the popular xchat IRC client
+.SH DESCRIPTION
+.PP
+This is a manual page written for Debian because the original package doesn't have one. For further reference, check the \fBSEE ALSO\fR section.
+.SS "Usage:"
+.IP
+xchat\-gnome [OPTION...]
+.SS "Help Options:"
+.TP
+\-?, \fB\-\-help\fR
+Show help options
+.TP
+\fB\-\-help\-all\fR
+Show all help options
+.TP
+\fB\-\-help\-gtk\fR
+Show GTK+ Options
+.TP
+\fB\-\-help\-bonobo\-activation\fR
+Show Bonobo Activation options
+.TP
+\fB\-\-help\-gnome\fR
+Show GNOME options
+.TP
+\fB\-\-help\-gnome\-session\fR
+Show session management options
+.TP
+\fB\-\-help\-gnome\-ui\fR
+Show GNOME GUI options
+.SS "Application Options:"
+.TP
+\fB\-d\fR, \fB\-\-cfgdir\fR=\fIdirectory\fR
+Use directory instead of the default config dir
+.TP
+\fB\-a\fR, \fB\-\-no\-auto\fR
+Don't auto\-connect to servers
+.TP
+\fB\-n\fR, \fB\-\-no\-plugins\fR
+Don't auto\-load plugins
+.TP
+\fB\-u\fR, \fB\-\-url\fR=\fIirc\fR://server:port/channel
+Open an irc:// url
+.TP
+\fB\-v\fR, \fB\-\-version\fR
+Show version information
+.TP
+\fB\-\-display\fR=\fIDISPLAY\fR
+X display to use
+.SH "SEE ALSO"
+http://xchat-gnome.navi.cx/
